First commit, first part of frontend done, still missing admin panel and some adjustments

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,287 @@
+html {
+  background-color: #424242;
+  font-size: 10px;
+  line-height: 10px;
+}
+
+a,
+button,
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  color: inherit;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+h1 {
+  font-size: 3.5rem;
+  line-height: 3.6rem;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 3rem;
+  line-height: 3.3rem;
+}
+
+h3 {
+  font-size: 2.5rem;
+  line-height: 2.8rem;
+}
+
+h4 {
+  font-size: 2rem;
+  line-height: 2.3rem;
+}
+
+h5 {
+  font-size: 1.6rem;
+  line-height: 1.8rem;
+}
+
+p {
+  font-size: 1.4rem;
+  line-height: 1.7rem;
+}
+
+.myFooter {
+  padding: 10px 0;
+  border-top: 1px solid #282c34;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.textLeft {
+  text-align: left;
+}
+
+/*-------------------------*/
+/* ------Basics------------ */
+/*-------------------------*/
+/* Containers*/
+
+.containerLg {
+  width: 100%;
+  max-width: 1200px;
+}
+
+/*Css Grid*/
+.displayGridColumn10,
+.displayGridColumn8,
+.displayGridColumn5,
+.displayGridColumn4,
+.displayGridColumn3,
+.displayGridColumn2,
+.displayGridColumn1 {
+  display: inline-grid;
+  grid-gap: 20px;
+}
+
+.displayGridColumn10 {
+  grid-template-columns: repeat(10, 1fr);
+}
+
+.displayGridColumn8 {
+  grid-template-columns: repeat(8, 1fr);
+}
+
+.displayGridColumn5 {
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.displayGridColumn4 {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.displayGridColumn3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.displayGridColumn2 {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.displayGridColumn1 {
+  grid-template-columns: repeat(1, 1fr);
+}
+
+.grid-item {
+  border-radius: 10px;
+  background-color: #61dafb;
+  overflow: hidden;
+}
+
+/*Flex*/
+.row {
+  display: flex;
+  flex-flow: row;
+}
+
+.column {
+  display: flex;
+  flex-flow: column;
+}
+
+.centerXY {
+  justify-content: center;
+  align-items: center;
+}
+
+/* Sections */
+section {
+  padding: 40px 0;
+}
+
+.isPrimary {
+  background-color: #4b4a4a;
+}
+
+/*Left Bar*/
+.LeftMenuBar {
+  display: grid;
+  grid-template-rows: 100px 1fr 0.082fr;
+  position: fixed;
+  width: 105px;
+  left: 0;
+  top: 0;
+  height: 100%;
+  color: #fff;
+  background-color: #282c34;
+  border-right: 2px solid #61dafb;
+  overflow: hidden;
+}
+
+.LeftMenuHeader {
+  padding: 20px 0;
+}
+
+.outerLeftBarIcons {
+  grid-gap: 10px;
+}
+
+.outerLeftBarIcons div {
+  position: relative;
+  background-color: #4b4a4a;
+  width: 80px;
+  height: 80px;
+  border-radius: 20%;
+  border: 1px solid #000000;
+  transition: border-radius 0.5s;
+}
+
+.outerLeftBarIcons .activeMenuItem div,
+.outerLeftBarIcons div:hover {
+  cursor: pointer;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.outerLeftBarIcons .activeMenuItem div {
+  -webkit-box-shadow: inset 0px -1px 23px 3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: inset 0px -1px 23px 3px rgba(0, 0, 0, 0.75);
+  box-shadow: inset 0px -1px 23px 3px rgba(0, 0, 0, 0.75);
+}
+
+.outerLeftBarIcons div img {
+  position: absolute;
+  width: 36px;
+  height: 36px;
+  left: calc(50% - 18px);
+  top: calc(50% - 25px);
+  transition: top 0.5s;
+}
+
+.outerLeftBarIcons div span {
+  position: absolute;
+  text-transform: uppercase;
+  left: 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+  transition: opacity 0.3s;
+  font-size: 1.3rem;
+}
+
+.outerLeftBarIcons .activeMenuItem div span,
+.outerLeftBarIcons div:hover span {
+  opacity: 0;
+}
+
+.outerLeftBarIcons .activeMenuItem div img,
+.outerLeftBarIcons div:hover img {
+  top: calc(50% - 18px);
+}
+
+/* Single Pages */
+
+.outerSinglePageSections {
+  display: grid;
+}
+
+/* Single Pet */
+
+.outerSinglePet {
+  overflow: hidden;
+  cursor: pointer;
+}
+.outerSinglePet .singlePetTxt {
+  padding: 10px;
+}
+
+/*Single Breed*/
+.outerSingleBreed {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100% - 20px);
+  padding: 10px;
+}
+
+/* Buttons */
+.BtnConnect {
+  width: 100%;
+  padding: 20px 0;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  color: #000;
+  font-weight: bold;
+  background-color: #61dafb;
+}
+
+/* images */
+.imgResponsive {
+  width: 100%;
+}
+
+.scalableImg {
+  overflow: hidden;
+}
+
+.scalableImg img {
+  transition: transform 0.5s;
+}
+outerScalableImg
+.outerScalableImg:hover .scalableImg img {
+  transform: scale(1.05);
+}
+
+/* Others */
+
+.mainContentBox {
+  width: calc(100% - 105px);
+  margin-left: 105px;
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
 }
@@ -10,24 +294,86 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  width: calc(100% - 105px);
+  min-height: 100px;
   font-size: calc(10px + 2vmin);
+  margin-left: 105px;
   color: white;
+  border-bottom: 2px solid #61dafb;
 }
 
-.App-link {
-  color: #61dafb;
+/* filters */
+.outerFilterBar {
+  margin: 0 auto;
+  color: #fff;
+  width: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.filterBar {
+  position: relative;
+  background-color: #fff;
+  width: 100%;
+  height: 10px;
+  border-radius: 10px;
+}
+
+.filterBar span {
+  display: block;
+  position: absolute;
+  top: -5px;
+  left: 0;
+  border: 5px solid #afafaf;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.filterBar span.selected {
+  background-color: #000;
+  border-color: #000;
+}
+
+.outerDragBar {
+  position: relative;
+  height: 10px;
+  border-radius: 10px;
+  margin-left: 100px;
+}
+
+.marker {
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  border-radius: 50% 50% 50% 0%;
+  transform: rotate(-45deg);
+}
+
+.marker::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 5px;
+  left: 5px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+.marker:hover {
+  background-color: blue;
+}
+
+.mapInSection {
+  width: calc(100% - 450px);
+}
+
+.activeSectionMap {
+  position: fixed;
+  width: 450px;
+  right: 0;
+  top: 0;
 }
